upd content + add tooltip

--- a/#src/html/_modal.html
+++ b/#src/html/_modal.html
@@ -6,43 +6,11 @@
       </button>
       <div class="heading modal__title">Способ ухода за жалюзи</div>
       <div class="modal__descr">
-        <h3>Влажный способ</h3>
+        <p>Во время уборки квартиры протирать рулонные шторы сухой тряпкой.</p>
         <p>
-          Неотъемлемым атрибутом современных окон являются жалюзи, защищающие
-          комнату от избыточного солнечного света. Благодаря им, в помещении
-          создается уютная и комфортная обстановка. Сегодня существует много
-          разновидностей такой «защиты от солнца»: горизонтальные и вертикальные
-          жалюзи, фотожалюзи, рулонные и пр. По материалу изготовления они
-          бывают деревянными, тканевыми, пластиковыми и алюминиевыми.
-        </p>
-        <p>
-          Жалюзи просты в эксплуатации, и единственное, что они требуют – чистки
-          по мере загрязнения. Способ очищения устройств напрямую зависит от
-          материала изготовления. Так, самый простой уход – уход за пластиковыми
-          и алюминиевые жалюзи. Их чистка заключается в протирании ламелей
-          влажной губкой или мягкой тряпочкой. Для этого можно использовать
-          раствор моющего средства. Вода используется холодная или теплая. Если
-          ламели загрязнены сильно, то можно вымыть их в ванной. В этом случае
-          на окно они вешаются влажными, после того, как стечет вода. При таком
-          мытье необходимо следить, чтобы не намочить карниз с движущимся
-          механизмом.
-        </p>
-
-        <h3>Сухая чистка</h3>
-        <p>
-          Деревянные жалюзи мыть не стоит, так как под воздействием воды они
-          деформируются, меняют форму и становятся совершенно непригодными. Для
-          того, чтобы очистить деревянные жалюзи, используется сухая тряпка или
-          пылесос. Также можно производить обработку средствами по уходу за
-          нелакированным деревом.
-        </p>
-        <h3>Самостоятельный уход возможен</h3>
-        <p>
-          Чистка тканевых вертикальных жалюзи – самая сложная чистка.
-          Еженедельно такая «защита от солнца» очищается пылесосом. Но хотя бы
-          один раз в год каждая ламель должна быть очищена отдельно. Для этого
-          можно воспользоваться услугой химчистки, но не каждая из этих
-          организаций оказывает подобные услуги.
+          Так же подойдет и пылесос. Он позволит собрать мельчайшие соринки и
+          пыль с поверхности рулонных штор. Его можно использовать раз в
+          несколько месяцев для поддержания свежести и чистоты.
         </p>
       </div>
     </div>
