--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -16,7 +16,7 @@
             <a class="menu__link" href="index.html#about">О нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="fabric.html">Каталог тканей</a>
+            <a class="menu__link" href="works.html">Наши работы</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="jalousie.html">Жалюзи</a>
