--- a/#src/html/roller.html
+++ b/#src/html/roller.html
@@ -16,10 +16,10 @@
         <h2 class="box-title">Рулонные жалюзи</h2>
         <div class="box-descr">
           <p>
-            Рулонные шторы совмещают в себе качества штор и жалюзи. Рулонные
+            Рулонные занавеси совмещают в себе качества штор и жалюзи. Рулонные
             шторы можно изготовить и на окна не стандартной формы. Большая гамма
             тканей позволят подобрать рулонные шторы практически под любой
-            интерьер. Сособ монтажа разнообразен: на раму окна, в проем, на
+            интерьер. Способ монтажа разнообразен: на раму окна, в проем, на
             стены или на потолок.
           </p>
         </div>
@@ -60,20 +60,30 @@
         <h2 class="box-title">Жалюзи “День-Ночь”</h2>
         <div class="box-descr">
           <p>
-            Шторы «День-Ночь» (Зебра) - один из самых популярных видов жалюзей,
-            благодарая тому что их можно поднимать и опускать, регулируя степень
-            освещенности комнат. Этот вид жалюзей представляет собой полотна,
-            состоящие из горизонтальных чередующихся прозрачных и непрозрачных
-            полос.
+            Рулонные шторы «День-Ночь» (Зебра) - один из самых популярных видов
+            жалюзи, благодаря тому что их можно поднимать и опускать, регулируя
+            степень освещенности комнат. Этот вид жалюзи представляет собой
+            полотна, состоящие из горизонтальных, чередующихся прозрачных и
+            непрозрачных полос.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#day-night" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn" data-toggle="modal">
+          <div class="btn btn-reset box-btn">
             Способ ухода
-          </button>
+            <div class="box-content">
+              <button class="box-content__close">
+                <img class="image" src="@img/icons/sprite.svg#close" alt="" />
+              </button>
+              <p>
+                Для долговечности и сохранения своего вида, шторы День-ночь
+                требуют определённого ухода при эксплуатации. Удаление пятен с
+                помощью пены жидкого мыла и губки или мягкой щетки.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -94,9 +104,9 @@
         <h2 class="box-title">Римские шторы</h2>
         <div class="box-descr">
           <p>
-            Римские шторы - это элегантный способ закрыть оконные проемы и при
+            Римские шторы — это элегантный способ закрыть оконные проемы и при
             этом украсить интерьер. В отличии от рулонных штор, ткани римских
-            штор можно стирать в химчистке и гладить. Сособ монтажа
+            штор можно стирать в химчистке и гладить. Способ монтажа
             разнообразен: на раму окна, в проем, на стены или на потолок.
           </p>
         </div>
@@ -104,7 +114,23 @@
           <a href="fabric.html#rome" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <button class="box-content__close">
+                <img class="image" src="@img/icons/sprite.svg#close" alt="" />
+              </button>
+              <p>
+                Уход:<br />
+                - допускается стирка тканей в стиральной машинке.<br />
+                - для высыхания ткань должна быть полностью расправлена;
+                запрещается сушка в центрифуге.<br />
+                - глажка римских тканей на средней температуре (до 150'С).<br />
+                - отбеливание запрещается.<br />
+                - допускается хим. чистка тканей.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -125,17 +151,38 @@
         <h2 class="box-title">Деревянные жалюзи</h2>
         <div class="box-descr">
           <p>
-            Шторы плиссе создают комфортный уровень приватности, помогая
-            регулировать степень естественного освещения, защитить от солнечных
-            лучей и стильно, модно и красиво оформить окно или использовать для
-            зонирования пространства.
+            Горизонтальные деревянные жалюзи изготавливают из древесины,
+            покрываются лаком, который защищает изделия от выгорания и
+            деформации, и существенно продлевают срок службы, а также защищают
+            от воздействия солнечных лучей. Деревянные жалюзи придают помещению
+            оригинальность, и подходят под деревянную мебель ввиду своей
+            текстуры.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#wood" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="@img/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                Для жалюзи из натуральных материалов влажная уборка недопустима.
+              </p>
+              <p>
+                Лучше всего применять пылесос, сухую тряпку или мягкую щетку,
+                использовать аэрозоли нежелательно.
+              </p>
+              <p>
+                Кроме того, для чистки деревянных жалюзи неприменимы
+                растворители и абразивные порошки, которые ведут к разрушению
+                верхнего слоя, образованию трещин и дефектов внешнего вида.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -159,16 +206,30 @@
         <h2 class="box-title">Роллеты (роллставни)</h2>
         <div class="box-descr">
           <p>
-            Роллеты используются для защиты от пыли, света и взлома.
-            Устанавливаются на оконные проемёмы, дверные и гаражные. Управление
-            роллетами может быть ручным и эллектрическим.
+            Основная их функция — защита от несанкционированного проникновения в
+            здание.<br />А также:<br />-защита от природных факторов;<br />-тепло-
+            и звукоизоляция;<br />-экономия пространства в узких и
+            малогабаритных помещениях.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#rollet" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="@img/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                Загрязнения легко удаляются применением бытовых моющих средств,
+                щетки с нежесткой щетиной. Движущиеся, трущиеся элементы
+                рекомендуется регулярно смазывать маслом для уменьшения силы
+                трения.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -189,14 +250,29 @@
         <h2 class="box-title">Маскитная сетка</h2>
         <div class="box-descr">
           <p>
-            Москитная сетка —  это способ обеспечить спящему защиту от
+            Москитная сетка — это способ обеспечить спящему защиту от
             проникновения комаров, мух и других насекомых-вредителей в
             помещение, и обеспечивать спокойный отдых в любое время суток.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html" class="btn btn-reset box-btn">Каталог тканей</a>
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="@img/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                -Удалять пыли с конструкции влажной губкой 1-2 в месяц;<br />
+                -Москитное полотно убирать в короб в зимний период;<br />
+                -Не распрямлять плиссированное полотно;<br />
+                -Не дергать / не цеплять нити натяжения;<br />
+                -При выявлении дефекта в москитной конструкции связаться со
+                специалистом.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
