--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -65,7 +65,7 @@
             <a class="menu__link" href="index.html#about">О нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="fabric.html">Каталог тканей</a>
+            <a class="menu__link" href="works.html">Наши работы</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="jalousie.html">Жалюзи</a>
@@ -124,10 +124,10 @@
         <h2 class="box-title">Рулонные жалюзи</h2>
         <div class="box-descr">
           <p>
-            Рулонные шторы совмещают в себе качества штор и жалюзи. Рулонные
+            Рулонные занавеси совмещают в себе качества штор и жалюзи. Рулонные
             шторы можно изготовить и на окна не стандартной формы. Большая гамма
             тканей позволят подобрать рулонные шторы практически под любой
-            интерьер. Сособ монтажа разнообразен: на раму окна, в проем, на
+            интерьер. Способ монтажа разнообразен: на раму окна, в проем, на
             стены или на потолок.
           </p>
         </div>
@@ -168,20 +168,30 @@
         <h2 class="box-title">Жалюзи “День-Ночь”</h2>
         <div class="box-descr">
           <p>
-            Шторы «День-Ночь» (Зебра) - один из самых популярных видов жалюзей,
-            благодарая тому что их можно поднимать и опускать, регулируя степень
-            освещенности комнат. Этот вид жалюзей представляет собой полотна,
-            состоящие из горизонтальных чередующихся прозрачных и непрозрачных
-            полос.
+            Рулонные шторы «День-Ночь» (Зебра) - один из самых популярных видов
+            жалюзи, благодаря тому что их можно поднимать и опускать, регулируя
+            степень освещенности комнат. Этот вид жалюзи представляет собой
+            полотна, состоящие из горизонтальных, чередующихся прозрачных и
+            непрозрачных полос.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#day-night" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn" data-toggle="modal">
+          <div class="btn btn-reset box-btn">
             Способ ухода
-          </button>
+            <div class="box-content">
+              <button class="box-content__close">
+                <img class="image" src="images/icons/sprite.svg#close" alt="" />
+              </button>
+              <p>
+                Для долговечности и сохранения своего вида, шторы День-ночь
+                требуют определённого ухода при эксплуатации. Удаление пятен с
+                помощью пены жидкого мыла и губки или мягкой щетки.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -202,9 +212,9 @@
         <h2 class="box-title">Римские шторы</h2>
         <div class="box-descr">
           <p>
-            Римские шторы - это элегантный способ закрыть оконные проемы и при
+            Римские шторы — это элегантный способ закрыть оконные проемы и при
             этом украсить интерьер. В отличии от рулонных штор, ткани римских
-            штор можно стирать в химчистке и гладить. Сособ монтажа
+            штор можно стирать в химчистке и гладить. Способ монтажа
             разнообразен: на раму окна, в проем, на стены или на потолок.
           </p>
         </div>
@@ -212,7 +222,23 @@
           <a href="fabric.html#rome" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <button class="box-content__close">
+                <img class="image" src="images/icons/sprite.svg#close" alt="" />
+              </button>
+              <p>
+                Уход:<br />
+                - допускается стирка тканей в стиральной машинке.<br />
+                - для высыхания ткань должна быть полностью расправлена;
+                запрещается сушка в центрифуге.<br />
+                - глажка римских тканей на средней температуре (до 150'С).<br />
+                - отбеливание запрещается.<br />
+                - допускается хим. чистка тканей.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -233,17 +259,38 @@
         <h2 class="box-title">Деревянные жалюзи</h2>
         <div class="box-descr">
           <p>
-            Шторы плиссе создают комфортный уровень приватности, помогая
-            регулировать степень естественного освещения, защитить от солнечных
-            лучей и стильно, модно и красиво оформить окно или использовать для
-            зонирования пространства.
+            Горизонтальные деревянные жалюзи изготавливают из древесины,
+            покрываются лаком, который защищает изделия от выгорания и
+            деформации, и существенно продлевают срок службы, а также защищают
+            от воздействия солнечных лучей. Деревянные жалюзи придают помещению
+            оригинальность, и подходят под деревянную мебель ввиду своей
+            текстуры.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#wood" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="images/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                Для жалюзи из натуральных материалов влажная уборка недопустима.
+              </p>
+              <p>
+                Лучше всего применять пылесос, сухую тряпку или мягкую щетку,
+                использовать аэрозоли нежелательно.
+              </p>
+              <p>
+                Кроме того, для чистки деревянных жалюзи неприменимы
+                растворители и абразивные порошки, которые ведут к разрушению
+                верхнего слоя, образованию трещин и дефектов внешнего вида.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -267,16 +314,30 @@
         <h2 class="box-title">Роллеты (роллставни)</h2>
         <div class="box-descr">
           <p>
-            Роллеты используются для защиты от пыли, света и взлома.
-            Устанавливаются на оконные проемёмы, дверные и гаражные. Управление
-            роллетами может быть ручным и эллектрическим.
+            Основная их функция — защита от несанкционированного проникновения в
+            здание.<br />А также:<br />-защита от природных факторов;<br />-тепло-
+            и звукоизоляция;<br />-экономия пространства в узких и
+            малогабаритных помещениях.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html#rollet" class="btn btn-reset box-btn"
             >Каталог тканей</a
           >
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="images/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                Загрязнения легко удаляются применением бытовых моющих средств,
+                щетки с нежесткой щетиной. Движущиеся, трущиеся элементы
+                рекомендуется регулярно смазывать маслом для уменьшения силы
+                трения.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -297,14 +358,29 @@
         <h2 class="box-title">Маскитная сетка</h2>
         <div class="box-descr">
           <p>
-            Москитная сетка —  это способ обеспечить спящему защиту от
+            Москитная сетка — это способ обеспечить спящему защиту от
             проникновения комаров, мух и других насекомых-вредителей в
             помещение, и обеспечивать спокойный отдых в любое время суток.
           </p>
         </div>
         <div class="box-btns">
           <a href="fabric.html" class="btn btn-reset box-btn">Каталог тканей</a>
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <div class="btn btn-reset box-btn">
+            Способ ухода
+            <div class="box-content">
+              <div class="box-content__close">
+                <img class="image" src="images/icons/sprite.svg#close" alt="" />
+              </div>
+              <p>
+                -Удалять пыли с конструкции влажной губкой 1-2 в месяц;<br />
+                -Москитное полотно убирать в короб в зимний период;<br />
+                -Не распрямлять плиссированное полотно;<br />
+                -Не дергать / не цеплять нити натяжения;<br />
+                -При выявлении дефекта в москитной конструкции связаться со
+                специалистом.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -334,43 +410,11 @@
       </button>
       <div class="heading modal__title">Способ ухода за жалюзи</div>
       <div class="modal__descr">
-        <h3>Влажный способ</h3>
+        <p>Во время уборки квартиры протирать рулонные шторы сухой тряпкой.</p>
         <p>
-          Неотъемлемым атрибутом современных окон являются жалюзи, защищающие
-          комнату от избыточного солнечного света. Благодаря им, в помещении
-          создается уютная и комфортная обстановка. Сегодня существует много
-          разновидностей такой «защиты от солнца»: горизонтальные и вертикальные
-          жалюзи, фотожалюзи, рулонные и пр. По материалу изготовления они
-          бывают деревянными, тканевыми, пластиковыми и алюминиевыми.
-        </p>
-        <p>
-          Жалюзи просты в эксплуатации, и единственное, что они требуют – чистки
-          по мере загрязнения. Способ очищения устройств напрямую зависит от
-          материала изготовления. Так, самый простой уход – уход за пластиковыми
-          и алюминиевые жалюзи. Их чистка заключается в протирании ламелей
-          влажной губкой или мягкой тряпочкой. Для этого можно использовать
-          раствор моющего средства. Вода используется холодная или теплая. Если
-          ламели загрязнены сильно, то можно вымыть их в ванной. В этом случае
-          на окно они вешаются влажными, после того, как стечет вода. При таком
-          мытье необходимо следить, чтобы не намочить карниз с движущимся
-          механизмом.
-        </p>
-
-        <h3>Сухая чистка</h3>
-        <p>
-          Деревянные жалюзи мыть не стоит, так как под воздействием воды они
-          деформируются, меняют форму и становятся совершенно непригодными. Для
-          того, чтобы очистить деревянные жалюзи, используется сухая тряпка или
-          пылесос. Также можно производить обработку средствами по уходу за
-          нелакированным деревом.
-        </p>
-        <h3>Самостоятельный уход возможен</h3>
-        <p>
-          Чистка тканевых вертикальных жалюзи – самая сложная чистка.
-          Еженедельно такая «защита от солнца» очищается пылесосом. Но хотя бы
-          один раз в год каждая ламель должна быть очищена отдельно. Для этого
-          можно воспользоваться услугой химчистки, но не каждая из этих
-          организаций оказывает подобные услуги.
+          Так же подойдет и пылесос. Он позволит собрать мельчайшие соринки и
+          пыль с поверхности рулонных штор. Его можно использовать раз в
+          несколько месяцев для поддержания свежести и чистоты.
         </p>
       </div>
     </div>
