fix bag, adaptive

--- a/#src/html/works.html
+++ b/#src/html/works.html
@@ -1,5 +1,5 @@
 <!-- roller -->
-<div class="diagonal-box fabric" id="roller">
+<div class="diagonal-box fabric fabric-first" id="roller">
   <div class="container fabric__container">
     <h2 class="header__ver header__ver-right fabric__head">Рулонные</h2>
     <div class="boxes fabric__boxes fabric__boxes-roller">
