--- a/#src/works.html
+++ b/#src/works.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @include('html/head.html', { "title":"Каталог тканей" })
+  @include('html/head.html', { "title":"Наши работы" })
   <body>
     <div class="wrapper">
       @include('html/header.html')
