--- a/biadecor/works.html
+++ b/biadecor/works.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="css/style.css?ver=1.2.0" />
+  <link rel="stylesheet" href="css/style.css?ver=1.2.5" />
   <!-- подключение скриптов -->
   <script defer src="js/vendor/swiper-bundle.min.js"></script>
   <script defer src="js/main.min.js"></script>
@@ -42,7 +42,7 @@
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
   <!-- title -->
-  <title>Каталог тканей</title>
+  <title>Наши работы</title>
 </head>
 
   <body>
@@ -55,7 +55,7 @@
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
-          <li class="menu__item">
+          <li class="menu__item active">
             <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
@@ -107,7 +107,7 @@
 </header>
 
       <main class="main"><!-- roller -->
-<div class="diagonal-box fabric" id="roller">
+<div class="diagonal-box fabric fabric-first" id="roller">
   <div class="container fabric__container">
     <h2 class="header__ver header__ver-right fabric__head">Рулонные</h2>
     <div class="boxes fabric__boxes fabric__boxes-roller">
