--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -6,7 +6,7 @@
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
-          <li class="menu__item">
+          <li class="menu__item active">
             <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
