--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="css/style.css?ver=1.2.0" />
+  <link rel="stylesheet" href="css/style.css?ver=1.2.5" />
   <!-- подключение скриптов -->
   <script defer src="js/vendor/swiper-bundle.min.js"></script>
   <script defer src="js/main.min.js"></script>
@@ -55,7 +55,7 @@
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
-          <li class="menu__item">
+          <li class="menu__item active">
             <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
