upd main sec on index

--- a/#src/html/_main.html
+++ b/#src/html/_main.html
@@ -1,8 +1,15 @@
 <div class="diagonal-box first">
   <div class="container first__container">
     <h1 class="first__head heading">
-      Контролируй дневной свет
-      <span>с нашей помощью</span>
+
+      - Жалюзи<br>
+      - Роллеты<br>
+      - Москитные сетки
+      <span>
+
+        На заказ
+      </span>
+
     </h1>
     <a href="#" class="btn btn-reset first__btn">Акция до 10%</a>
   </div>
