delete before-bg from woks and change dimens slide

--- a/#src/html/works.html
+++ b/#src/html/works.html
@@ -7,25 +7,25 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_1.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_2.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_3.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_4.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_5.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_6.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/roller/rul_7.jpg" alt="" />
+            <img class="image" src="@img/works/roller/rul_7.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -53,22 +53,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_4.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_1.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_2.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_3.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_5.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/day-night/dn_6.jpg" alt="" />
+            <img class="image" src="@img/works/day-night/dn_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <div class="main-slider__btn main-slider__btn-prev">
@@ -90,22 +90,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_1.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_2.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_3.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_4.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_5.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rome/rim_6.jpg" alt="" />
+            <img class="image" src="@img/works/rome/rim_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -129,22 +129,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_1.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_2.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_3.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_4.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_5.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/wood/der_6.jpg" alt="" />
+            <img class="image" src="@img/works/wood/der_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
             <img class="image" src="@img/works/wood/der_7.jpg" alt="" />
@@ -171,22 +171,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-1.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-2.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-3.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-4.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-5.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/rollet/rol-6.jpg" alt="" />
+            <img class="image" src="@img/works/rollet/rol-6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -210,22 +210,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_1.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_2.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_3.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_4.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_5.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="@img/works/moskit/mos_6.jpg" alt="" />
+            <img class="image" src="@img/works/moskit/mos_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
