--- a/biadecor/works.html
+++ b/biadecor/works.html
@@ -8,43 +8,37 @@
   <!-- <link rel="stylesheet" href="css/adv.css" /> -->
   <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
   <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-  />
-  <link rel="stylesheet" href="css/style.css?ver=1.2.5" />
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/style.css?ver=1.2.7" />
   <!-- подключение скриптов -->
   <script defer src="js/vendor/swiper-bundle.min.js"></script>
   <script defer src="js/main.min.js"></script>
   <!-- подключение favicon -->
   <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="images/favicon/apple-touch-icon.png"
-  />
+        rel="apple-touch-icon"
+        sizes="180x180"
+        href="images/favicon/apple-touch-icon.png" />
   <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="images/favicon/favicon-32x32.png"
-  />
+        rel="icon"
+        type="image/png"
+        sizes="32x32"
+        href="images/favicon/favicon-32x32.png" />
   <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="images/favicon/favicon-16x16.png"
-  />
+        rel="icon"
+        type="image/png"
+        sizes="16x16"
+        href="images/favicon/favicon-16x16.png" />
   <link rel="manifest" href="images/favicon/site.webmanifest" />
   <link
-    rel="mask-icon"
-    href="images/favicon/safari-pinned-tab.svg"
-    color="#5bbad5"
-  />
+        rel="mask-icon"
+        href="images/favicon/safari-pinned-tab.svg"
+        color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
   <!-- title -->
   <title>Наши работы</title>
 </head>
-
   <body>
     <div class="wrapper">
       <header class="header">
@@ -114,25 +108,25 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_1.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_2.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_3.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_4.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_5.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_6.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/roller/rul_7.jpg" alt="" />
+            <img class="image" src="images/works/roller/rul_7.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -160,22 +154,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_4.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_1.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_2.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_3.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_5.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/day-night/dn_6.jpg" alt="" />
+            <img class="image" src="images/works/day-night/dn_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <div class="main-slider__btn main-slider__btn-prev">
@@ -197,22 +191,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_1.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_2.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_3.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_4.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_5.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rome/rim_6.jpg" alt="" />
+            <img class="image" src="images/works/rome/rim_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -236,22 +230,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_1.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_2.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_3.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_4.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_5.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/wood/der_6.jpg" alt="" />
+            <img class="image" src="images/works/wood/der_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
             <img class="image" src="images/works/wood/der_7.jpg" alt="" />
@@ -278,22 +272,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-1.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-2.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-3.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-4.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-5.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/rollet/rol-6.jpg" alt="" />
+            <img class="image" src="images/works/rollet/rol-6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
@@ -317,22 +311,22 @@
       <div class="swiper main-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_1.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_1.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_2.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_2.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_3.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_3.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_4.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_4.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_5.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_5.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
           <div class="swiper-slide main-slider__slide">
-            <img class="image" src="images/works/moskit/mos_6.jpg" alt="" />
+            <img class="image" src="images/works/moskit/mos_6.jpg" alt="" loading="lazy" width="720" height="440" />
           </div>
         </div>
         <!-- срелка -->
