--- a/#src/html/roller.html
+++ b/#src/html/roller.html
@@ -237,7 +237,7 @@
 <!-- setka -->
 <div class="diagonal-box roller roller-setka">
   <div class="container roller__container">
-    <h2 class="header__ver header__ver-last roller__head">москинтная сетка</h2>
+    <h2 class="header__ver header__ver-last roller__head">москинтные сетки</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
       <div class="box-img">
         <picture>
@@ -246,7 +246,7 @@
         </picture>
       </div>
       <div class="box-text roller__box">
-        <h2 class="box-title">Москитная сетка</h2>
+        <h2 class="box-title">Москитные сетки</h2>
         <div class="box-descr">
           <p>
             Москитная сетка — это способ обеспечить спящему защиту от
