--- a/#src/index.html
+++ b/#src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @include('html/head.html', { "title":"Главная" })
-  <body>
-    <div class="wrapper">
-      @include('html/header.html')
+@include('html/head.html', { "title":"Главная - Biadecor жалюзи" })
 
-      <main class="main">
-        @include('html/_main.html')@include('html/_features.html')
-        @include('html/_about.html') @include('html/_contacts.html')
-      </main>
-      @include('html/footer.html')
-    </div>
-  </body>
+<body>
+  <div class="wrapper">
+    @include('html/header.html')
+
+    <main class="main">
+      @include('html/_main.html')@include('html/_features.html')
+      @include('html/_about.html') @include('html/_contacts.html')
+    </main>
+    @include('html/footer.html')
+  </div>
+</body>
+
 </html>
