--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,11 +37,12 @@
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
   <!-- title -->
-  <title>Главная</title>
+  <title>Главная - Biadecor жалюзи</title>
 </head>
-  <body>
-    <div class="wrapper">
-      <header class="header">
+
+<body>
+  <div class="wrapper">
+    <header class="header">
   <div class="container header__container">
     <a href="index.html" class="header__logo">
       <img class="image" src="images/logo-header.svg" alt="Logo BIADecor" />
@@ -100,8 +101,8 @@
   </div>
 </header>
 
-      <main class="main">
-        <div class="diagonal-box first">
+    <main class="main">
+      <div class="diagonal-box first">
   <div class="container first__container">
     <h1 class="first__head heading">
 
@@ -168,7 +169,7 @@
   </div>
 </div>
 
-        <div class="diagonal-box bg-two about" id="about">
+      <div class="diagonal-box bg-two about" id="about">
   <div class="container about__container">
     <h2 class="header__ver about__head">О нас</h2>
     <div class="about__boxes boxes">
@@ -230,11 +231,12 @@
     </div>
   </div>
 </div>
-      </main>
-      <footer class="footer">
+    </main>
+    <footer class="footer">
   <div class="container"></div>
 </footer>
 
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
